--- a/substrate/primitives/runtime/Cargo.toml
+++ b/substrate/primitives/runtime/Cargo.toml
@@ -18,6 +18,7 @@ codec = { package = "parity-scale-codec", version = "3.6.1", default-features = 
 	"derive",
 	"max-encoded-len",
 ] }
+softfloat = { git = "https://github.com/energyGiver/softfloat.git", version = "1.0.0", default-features = false }
 bounded-collections = { version = "0.1.8", default-features = false }
 either = { version = "1.5", default-features = false }
 hash256-std-hasher = { version = "0.15.2", default-features = false }
