--- a/cumulus/parachain-template/pallets/template/Cargo.toml
+++ b/cumulus/parachain-template/pallets/template/Cargo.toml
@@ -16,7 +16,7 @@ codec = { package = "parity-scale-codec", version = "3.0.0", features = [
 	"derive",
 ], default-features = false }
 scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
-softfloat = { git = "https://github.com/energyGiver/softfloat.git", version = "1.0.0", default-features = false }
+softfloat = { path = "../../../../substrate/primitives/softfloat", default-features = false }
 
 # Substrate
 frame-benchmarking = { path = "../../../../substrate/frame/benchmarking", default-features = false, optional = true }
