--- a/cumulus/zombienet/ibs-local-network.toml
+++ b/cumulus/zombienet/ibs-local-network.toml
@@ -42,118 +42,122 @@ ws_port = 7501
 name = "ferdie"
 validator = true
 args = ["-lparachain=debug", "-l=xcm=trace"]
-rpc_port = 7500
-ws_port = 7501
-
-[[relaychain.nodes]]
-name = "grace"
-validator = true
-args = ["-lparachain=debug", "-l=xcm=trace"]
-rpc_port = 7500
-ws_port = 7501
-
-[[relaychain.nodes]]
-name = "harry"
-validator = true
-args = ["-lparachain=debug", "-l=xcm=trace"]
-rpc_port = 7500
-ws_port = 7501
-
-[[relaychain.nodes]]
-name = "irene"
-validator = true
-args = ["-lparachain=debug", "-l=xcm=trace"]
 rpc_port = 7600
 ws_port = 7601
 
+
+# [[parachains]]
+# id = 1000
+# chain = "asset-hub-infra-local"
+# cumulus_based = true
+
+# # run alice as parachain collator
+# [[parachains.collators]]
+# name = "asset-hub-alice"
+# validator = true
+# args = ["-lparachain=debug", "-l=xcm=trace"]
+# command = "./target/release/infra-parachain"
+# rpc_port = 9500
+# ws_port = 9501
+
+# # run alice as parachain collator
+# [[parachains.collators]]
+# name = "asset-hub-bob"
+# validator = true
+# args = ["-lparachain=debug", "-l=xcm=trace"]
+# command = "./target/release/infra-parachain"
+# rpc_port = 9600
+# ws_port = 9601
+
+# [[parachains]]
+# id = 1001
+# chain = "contracts-infra-local"
+# cumulus_based = true
+
+# # run alice as parachain collator
+# [[parachains.collators]]
+# name = "contracts-infra-alice"
+# validator = true
+# args = ["-lparachain=debug", "-l=xcm=trace"]
+# command = "./target/release/infra-parachain"
+# rpc_port = 9700
+# ws_port = 9701
+
+# # run alice as parachain collator
+# [[parachains.collators]]
+# name = "contracts-infra-bob"
+# validator = true
+# args = ["-lparachain=debug", "-l=xcm=trace"]
+# command = "./target/release/infra-parachain"
+# rpc_port = 9800
+# ws_port = 9801
+
+# [[parachains]]
+# id = 1002
+# chain = "did-infra-local"
+# cumulus_based = true
+
+# # run alice as parachain collator
+# [[parachains.collators]]
+# name = "did-infra-alice"
+# validator = true
+# args = ["-lparachain=debug", "-l=xcm=trace"]
+# command = "./target/release/infra-parachain"
+# rpc_port = 9900
+# ws_port = 9901
+
+# # run alice as parachain collator
+# [[parachains.collators]]
+# name = "did-infra-bob"
+# validator = true
+# args = ["-lparachain=debug", "-l=xcm=trace"]
+# command = "./target/release/infra-parachain"
+# rpc_port = 10000
+# ws_port = 10001
+
+# [[parachains]]
+# id = 2000
+# chain = "urauth-local"
+# cumulus_based = true
+
+# # run alice as parachain collator
+# [[parachains.collators]]
+# name = "urauth-alice"
+# validator = true
+# args = ["-lparachain=debug", "-l=xcm=trace"]
+# command = "./target/release/infra-parachain"
+# rpc_port = 10100
+# ws_port = 10101
+
+# # run alice as parachain collator
+# [[parachains.collators]]
+# name = "urauth-bob"
+# validator = true
+# args = ["-lparachain=debug", "-l=xcm=trace"]
+# command = "./target/release/infra-parachain"
+# rpc_port = 10200
+# ws_port = 10201
+
+
 [[parachains]]
-id = 1000
-chain = "asset-hub-infra-local"
+id = 9999
+chain = "parachain-template-local"
 cumulus_based = true
 
 # run alice as parachain collator
 [[parachains.collators]]
-name = "asset-hub-alice"
-validator = true
-args = ["-lparachain=debug", "-l=xcm=trace"]
-command = "./target/release/infra-parachain"
-rpc_port = 9500
-ws_port = 9501
-
-# run alice as parachain collator
-[[parachains.collators]]
-name = "asset-hub-bob"
-validator = true
-args = ["-lparachain=debug", "-l=xcm=trace"]
-command = "./target/release/infra-parachain"
-rpc_port = 9600
-ws_port = 9601
-
-[[parachains]]
-id = 1001
-chain = "contracts-infra-local"
-cumulus_based = true
-
-# run alice as parachain collator
-[[parachains.collators]]
-name = "contracts-infra-alice"
-validator = true
-args = ["-lparachain=debug", "-l=xcm=trace"]
-command = "./target/release/infra-parachain"
-rpc_port = 9700
-ws_port = 9701
-
-# run alice as parachain collator
-[[parachains.collators]]
-name = "contracts-infra-bob"
-validator = true
-args = ["-lparachain=debug", "-l=xcm=trace"]
-command = "./target/release/infra-parachain"
-rpc_port = 9800
-ws_port = 9801
-
-[[parachains]]
-id = 1002
-chain = "did-infra-local"
-cumulus_based = true
-
-# run alice as parachain collator
-[[parachains.collators]]
-name = "did-infra-alice"
-validator = true
-args = ["-lparachain=debug", "-l=xcm=trace"]
-command = "./target/release/infra-parachain"
-rpc_port = 9900
-ws_port = 9901
-
-# run alice as parachain collator
-[[parachains.collators]]
-name = "did-infra-bob"
-validator = true
-args = ["-lparachain=debug", "-l=xcm=trace"]
-command = "./target/release/infra-parachain"
-rpc_port = 10000
-ws_port = 10001
-
-[[parachains]]
-id = 2000
-chain = "urauth-local"
-cumulus_based = true
-
-# run alice as parachain collator
-[[parachains.collators]]
-name = "urauth-alice"
+name = "template-alice"
 validator = true
 args = ["-lparachain=debug", "-l=xcm=trace"]
 command = "./target/release/parachain-template-node"
-rpc_port = 10100
-ws_port = 10101
+rpc_port = 10300
+ws_port = 10301
 
 # run alice as parachain collator
 [[parachains.collators]]
-name = "urauth-bob"
+name = "template-bob"
 validator = true
 args = ["-lparachain=debug", "-l=xcm=trace"]
 command = "./target/release/parachain-template-node"
-rpc_port = 10200
-ws_port = 10201
+rpc_port = 10400
+ws_port = 10401
